/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo-new.spongepowered.org/repository/maven-public/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

dependencies {
    api project(":TranslateCore")
    compileOnly 'org.spongepowered:configurate-core:4.0.0'
    compileOnly 'org.spongepowered:configurate-yaml:4.0.0'
    compileOnly 'net.kyori:adventure-text-serializer-plain:4.0.0-SNAPSHOT'
    compileOnly 'org.spongepowered:spongeapi:8.0.0-SNAPSHOT'
}

group = 'org.ships'
version = '1.0-SNAPSHOT'
description = 'CoreToSponge'
java.sourceCompatibility = JavaVersion.VERSION_16

